<resources>
    <string name="app_name">Mobile Financeiro</string>
    <string-array name="array">
        <item>Link 01 - Principais Erros e o Método dos 4 Elementos</item>
        <item>Link 02 - Desenvolvendo um App Android do Zero</item>
        <item>Link 03 - Desenvolvendo um App Android do Zero (Continuação)</item>
        <item>Link 04 - Suas dúvidas respondidas</item>
    </string-array>

    <!-- login_activity.xml -->
    <string name="etLogin">Nome de usuário</string>
    <string name="etPassword">Senha</string>
    <string name="btnLogin">Entrar</string>
    <string name="btnSignIn">Registrar-se</string>
    <string name="txtError">Nome de usuário e senha não compativeis</string>

    <!-- activity_login.xml -->
    <string name="etName">Nome</string>
    <string name="etMail">E-mail</string>
    <string name="etPassConf">Confirme sua senha</string>
    <string name="txtGenre">Você é do sexo: </string>
    <string name="rbMale">Masculino</string>
    <string name="rbFemale">Feminino</string>
</resources>
