<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signin"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/txtError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"
        android:textColor="#FF00"
        android:text="@string/txtError"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/etName"
        android:ems="10"
        android:id="@+id/editText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/etLogin"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:id="@+id/editText3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/etMail"
        android:id="@+id/editText4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/etPassword"
        android:id="@+id/editText5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/etPassConf"
        android:id="@+id/editText6" />

    <TextView
        android:text="@string/txtGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/textView" />

    <RadioGroup
        android:id="@+id/rgopcoes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp" >
        <RadioButton
            android:text="@string/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_weight="1" />
    </RadioGroup>

    <Button
        android:text="@string/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#29A63C"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:id="@+id/button" />
</LinearLayout>
