<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_actitivy"
    android:orientation="vertical"
    android:background="#FFFAFA"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/evento_topo"
    android:scaleType="centerInside"
    android:adjustViewBounds="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"
            android:hint="@string/etLogin"
            android:ems="10"
            android:id="@+id/etLogin" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/etPassword"
            android:ems="10"
            android:id="@+id/etPassword" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <Button
                android:text="@string/btnSignIn"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="5"
                android:background="#FF4444"
                android:textColor="#FFFFFF"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:id="@+id/btnSignIn" />
            <Button
                android:text="@string/btnLogin"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="5"
                android:background="#29A63C"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:id="@+id/btnLogin" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#FF00"
            android:visibility="invisible"
            android:text="@string/txtError"/>
    </LinearLayout>
</LinearLayout>
